<resources>
    <string name="app_name">Kophie</string>
    <string name="appName">Kophie.</string>
    <string name="appSlogan">Understand the very basic of coffee</string>
    <string name="titleDrinks">Top Coffee Drinks</string>
    <string name="subTitleDrinks">Here we explain our choices of most popular coffee drinks</string>
    <string name="drinks_name">Nama Minuman</string>
    <string name="drinks_description">Deskripsi</string>
    <string name="aboutDrinks">About the drinks</string>
    <string name="btnDesc">Description</string>
    <string name="resepBtn">Ingridients</string>
    <string name="shareBtn">Share</string>
    <string name="subtitleDetail">a brief explanation about your selected drink</string>
    <string name="titleAbout">The Coffee Addict</string>
    <string name="aboutName">Henzi Juandri</string>
    <string name="subtitleAbout">A not so Mobile Programmer</string>
    <string name="email">henzijuandri@student.telkomuniversity.ac.id</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="homenh">Home</string>
    <string-array name="data_drinks">
        <item>Espresso</item>
        <item>Doppio</item>
        <item>Ristretto</item>
        <item>Americano</item>
        <item>Long Black</item>
        <item>Latte</item>
        <item>Cappucino</item>
        <item>Moccacino</item>
        <item>Flat White</item>
        <item>Macchiato</item>
        <item>Affogato</item>
        <item>Espresso Con Panna</item>
    </string-array>
    <string-array name="data_ingredients_drinks">
        <item>Untuk membuat espresso, berikut adalah bahan–bahan yang dibutuhkan:\n\n1. Biji kopi: Pilih biji kopi berkualitas tinggi yang cocok untuk espresso. Biji kopi ini harus digiling menjadi bubuk yang sangat halus dan padat.\n2. Air: Gunakan air segar yang telah disaring. Jumlah air yang dibutuhkan biasanya adalah sekitar 30-40 ml.\n3. Mesin espresso: Mesin espresso digunakan untuk mengekstrak kopi dengan tekanan tinggi dan waktu ekstraksi yang singkat.\n4. Gelas shot: Gelas kecil yang digunakan untuk menyajikan espresso.\n5. Grinder: Alat penggiling kopi yang digunakan untuk menggiling biji kopi menjadi bubuk yang sangat halus dan padat.\n6. Timbangan: Digunakan untuk mengukur jumlah bubuk kopi yang tepat.
        </item>

        <item>Pembuatan Doppio sama dengan pembuatan Espresso, berikut adalah bahan–bahan yang dibutuhkan:\n\n1. Biji kopi: Pilih biji kopi berkualitas tinggi yang cocok untuk espresso. Biji kopi ini harus digiling menjadi bubuk yang sangat halus dan padat.\n2. Air: Gunakan air segar yang telah disaring. Jumlah air yang dibutuhkan biasanya adalah sekitar 30-40 ml.\n3. Mesin espresso: Mesin espresso digunakan untuk mengekstrak kopi dengan tekanan tinggi dan waktu ekstraksi yang singkat.\n4. Gelas shot: Gelas kecil yang digunakan untuk menyajikan espresso.\n5. Grinder: Alat penggiling kopi yang digunakan untuk menggiling biji kopi menjadi bubuk yang sangat halus dan padat.\n6. Timbangan: Digunakan untuk mengukur jumlah bubuk kopi yang tepat.
        </item>

        <item>Pembuatan Ristretto juga sama dengan pembuatan Espresso, berikut adalah bahan–bahan yang dibutuhkan:\n\n1. Biji kopi: Pilih biji kopi berkualitas tinggi yang cocok untuk espresso. Biji kopi ini harus digiling menjadi bubuk yang sangat halus dan padat.\n2. Air: Gunakan air segar yang telah disaring. Jumlah air yang dibutuhkan lebih sedikit sekitar 20-30 ml.\n3. Mesin espresso: Mesin espresso digunakan untuk mengekstrak kopi dengan tekanan tinggi dan waktu ekstraksi yang singkat.\n4. Gelas shot: Gelas kecil yang digunakan untuk menyajikan espresso.\n5. Grinder: Alat penggiling kopi yang digunakan untuk menggiling biji kopi menjadi bubuk yang sangat halus dan padat.\n6. Timbangan: Digunakan untuk mengukur jumlah bubuk kopi yang tepat.
        </item>

        <item>Berikut adalah bahan-bahan yang dibutuhkan untuk membuat Americano:\n\n1. Air panas: Americano adalah minuman kopi yang dibuat dengan menambahkan air panas ke dalam espresso, jadi yang dibutuhkan adalah air panas segar yang telah disaring.\n2. Biji kopi: Pilih biji kopi berkualitas tinggi yang cocok untuk espresso. Biji kopi ini harus digiling menjadi bubuk yang sangat halus dan padat.\n3. Mesin espresso: Mesin espresso digunakan untuk mengekstrak kopi dengan tekanan tinggi dan waktu ekstraksi yang singkat.\n4. Gelas Americano: Gelas yang digunakan untuk menyajikan Americano.\n5. Grinder: Alat penggiling kopi yang digunakan untuk menggiling biji kopi menjadi bubuk yang sangat halus dan padat.\n6. Timbangan: Digunakan untuk mengukur jumlah bubuk kopi yang tepat.
        </item>

        <item>Pembuatan Long Black juga sama dengan pembuatan Americano. Berikut adalah bahan-bahan yang dibutuhkan untuk membuat Americano:\n\n1. Air panas: Americano adalah minuman kopi yang dibuat dengan menambahkan air panas ke dalam espresso, jadi yang dibutuhkan adalah air panas segar yang telah disaring.\n2. Biji kopi: Pilih biji kopi berkualitas tinggi yang cocok untuk espresso. Biji kopi ini harus digiling menjadi bubuk yang sangat halus dan padat.\n3. Mesin espresso: Mesin espresso digunakan untuk mengekstrak kopi dengan tekanan tinggi dan waktu ekstraksi yang singkat.\n4. Gelas Americano: Gelas yang digunakan untuk menyajikan Americano.\n5. Grinder: Alat penggiling kopi yang digunakan untuk menggiling biji kopi menjadi bubuk yang sangat halus dan padat.\n6. Timbangan: Digunakan untuk mengukur jumlah bubuk kopi yang tepat.</item>

        <item>Berikut adalah bahan-bahan yang dibutuhkan untuk membuat latte:\n\n1. Espresso shot: Gunakan satu atau dua shot espresso sebagai dasar minuman latte.\n2. Susu: Pilih susu segar yang diinginkan. Susu yang paling umum digunakan dalam pembuatan latte adalah susu sapi, tetapi Anda juga dapat menggunakan susu kedelai, susu almond, atau susu lainnya sesuai dengan preferensi Anda.\n3. Sirup (opsional): Sirup karamel, sirup vanila, atau sirup lainnya dapat ditambahkan untuk memberikan rasa tambahan pada minuman latte.\n4. Pemanis (opsional): Gula atau pemanis lainnya dapat ditambahkan ke dalam minuman latte sesuai dengan selera.\n5. Mesin espresso: Mesin espresso digunakan untuk mengekstrak espresso dengan tekanan tinggi.\n6. Alat pengukur: Digunakan untuk mengukur jumlah susu dan espresso yang diperlukan untuk membuat minuman latte.\n7. Pitcher susu: Pitcher khusus susu digunakan untuk mengukur, mengukus, dan mencampur susu dalam minuman latte.
        </item>

        <item>Berikut adalah bahan-bahan yang dibutuhkan untuk membuat cappuccino:\n\n1. Espresso shot: Gunakan satu atau dua shot espresso sebagai dasar minuman cappuccino.\n2. Susu: Pilih susu segar yang diinginkan. Susu yang paling umum digunakan dalam pembuatan cappuccino adalah susu sapi, tetapi Anda juga dapat menggunakan susu kedelai, susu almond, atau susu lainnya sesuai dengan preferensi Anda.\n3. Kakao atau bubuk kayu manis (opsional): Bubuk kakao atau bubuk kayu manis dapat ditambahkan untuk memberikan rasa tambahan pada minuman cappuccino.\n4. Mesin espresso: Mesin espresso digunakan untuk mengekstrak espresso dengan tekanan tinggi.\n5. Alat pengukur: Digunakan untuk mengukur jumlah susu dan espresso yang diperlukan untuk membuat minuman cappuccino.\n6. Pitcher susu: Pitcher khusus susu digunakan untuk mengukur, mengukus, dan mencampur susu dalam minuman cappuccino.\n7. Tamper: Alat pengompres espresso yang digunakan untuk memadatkan bubuk kopi di dalam portafilter.\n8. Portafilter: Bagian mesin espresso yang digunakan untuk menampung bubuk kopi dan mengekstrak espresso.
        </item>

        <item>Berikut adalah bahan-bahan lengkap untuk membuat Moccacino:\n\n1. Espresso Shot\n2. Gula pasir\n3. Susu segar\n4. Bubuk kakao atau sirup cokelat\n5. Whipped cream (opsional)\n6. Serbuk kayu manis (opsional)\nCatatan: Beberapa variasi resep Moccacino juga dapat menambahkan bahan-bahan lain seperti es krim, vanila, atau krim kocok sebagai topping tambahan.\n\nUntuk membuat Moccacino, Anda dapat mulai dengan mencampurkan Espresso Shot, gula pasir, dan sedikit air panas untuk membentuk campuran pasta kopi. Kemudian, panaskan susu segar di atas kompor atau dalam microwave hingga panas dan tambahkan bubuk kakao atau sirup cokelat ke dalam susu yang sudah dipanaskan. Aduk campuran ini hingga merata.</item>

        <item>Berikut adalah bahan-bahan yang dibutuhkan untuk membuat Flat White:\n\n1. Espresso: Flat White dibuat dengan menggunakan 1-2 shot espresso yang diekstraksi dari biji kopi yang berkualitas tinggi.\n2. Susu segar: Pilih susu segar yang memiliki kandungan lemak tinggi seperti susu full cream atau susu skim untuk memberikan tekstur yang creamy pada minuman.\n3. Mesin espresso: Mesin espresso digunakan untuk mengekstrak kopi dengan tekanan tinggi dan waktu ekstraksi yang singkat.\n4. Pitcher susu: Wadah untuk mengukur dan memanaskan susu dengan ujung kerucut yang sempit untuk menghasilkan mikrofoam.\n5. Termometer susu: Digunakan untuk mengukur suhu susu yang ideal untuk pembuatan Flat White.\n6. Latte art tools: Seperti penjepit dan tusuk gigi untuk membantu membuat latte art yang indah di atas minuman.
        </item>

        <item>Berikut adalah bahan-bahan yang dibutuhkan untuk membuat Flat Macchiato:\n\n1. Espresso: Flat Macchiato dibuat dengan menggunakan 1 shot espresso yang diekstraksi dari biji kopi yang berkualitas tinggi.\n2. Susu segar: Pilih susu segar yang memiliki kandungan lemak tinggi seperti susu full cream atau susu skim untuk memberikan tekstur yang creamy pada minuman.\n3. Mesin espresso: Mesin espresso digunakan untuk mengekstrak kopi dengan tekanan tinggi dan waktu ekstraksi yang singkat.\n4. Pitcher susu: Wadah untuk mengukur dan memanaskan susu dengan ujung kerucut yang sempit untuk menghasilkan mikrofoam.\n5. Sendok: Digunakan untuk menambahkan busa susu pada permukaan minuman.</item>

        <item>Berikut adalah bahan-bahan yang dibutuhkan untuk membuat Affogato:\n\n1. Espresso: Affogato dibuat dengan menggunakan 1 shot espresso yang diekstraksi dari biji kopi yang berkualitas tinggi.\n2. Es krim vanilla: Pilih es krim vanilla yang lembut dan berkualitas baik untuk memberikan rasa yang pas dengan espresso yang kuat.\n3. Cokelat parut (opsional): Cokelat parut digunakan sebagai topping untuk memberikan sentuhan manis pada minuman.\n4. Gelas atau mangkuk: Gelas atau mangkuk yang digunakan untuk menyajikan Affogato.</item>

        <item>Berikut adalah bahan-bahan yang dibutuhkan untuk membuat Espresso Con Panna:\n\n1. Espresso: Espresso Con Panna dibuat dengan menggunakan 1 shot espresso yang diekstraksi dari biji kopi yang berkualitas tinggi.\n2. Whipped cream: Whipped cream segar atau yang sudah siap pakai bisa digunakan sebagai topping untuk menambahkan kelembutan pada espresso.\n3. Gelas espresso: Gelas kecil yang digunakan untuk menyajikan espresso.</item>
    </string-array>
</resources>