<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#212529"
    tools:context=".DetailActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title_about_drinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutDrinks"
            android:textSize="42sp"
            android:fontFamily="sans-serif-light"
            android:letterSpacing="0.05"
            android:textColor="@color/white"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/subTitle_about_drinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/subtitleDetail"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="#c4af9b"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded"
            >

            <TextView
                android:id="@+id/tv_drinks_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/drinks_name"
                android:textSize="37sp"
                android:letterSpacing="0.02"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textAlignment="center"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_drink"
                android:layout_width="220dp"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_drinks_name"
                app:layout_constraintStart_toStartOf="@+id/tv_drinks_name"
                app:layout_constraintEnd_toEndOf="@+id/tv_drinks_name"
                android:layout_marginTop="10dp"
                tools:src="@tools:sample/avatars"
                app:shapeAppearanceOverlay="@style/imgRounded"
                android:scaleType="centerCrop"
                />

            <Button
                android:id="@+id/btn_desc"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                app:layout_constraintTop_toBottomOf="@+id/img_drink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_ingredients"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_btn"
                android:textAllCaps="false"
                android:text="@string/btnDesc"
                android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"
                android:letterSpacing="0.03"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/btn_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                app:layout_constraintTop_toBottomOf="@+id/img_drink"
                app:layout_constraintStart_toEndOf="@+id/btn_desc"
                app:layout_constraintEnd_toEndOf="@id/btn_share"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_btn"
                android:textAllCaps="false"
                android:text="@string/resepBtn"
                android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"
                android:letterSpacing="0.03"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                app:layout_constraintTop_toBottomOf="@+id/img_drink"
                app:layout_constraintStart_toEndOf="@+id/btn_ingredients"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_btn"
                android:textAllCaps="false"
                android:text="@string/shareBtn"
                android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"
                android:letterSpacing="0.03"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_drinks_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/drinks_description"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:letterSpacing="0.03"
                android:lineSpacingMultiplier="1.12"
                android:justificationMode="inter_word"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</ScrollView>