<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    card_view:cardCornerRadius="3dp"
    app:ignore="NamespaceTypo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"
            app:shapeAppearanceOverlay="@style/imgRounded"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/img_about"
            card_view:layout_constraintEnd_toEndOf="@+id/img_about"
            card_view:layout_constraintTop_toBottomOf="@+id/img_about"
            android:layout_marginTop="8dp"
            android:text="@string/aboutName"
            android:textSize="45sp"
            android:textStyle="bold"
            android:fontFamily="serif"

            />

        <TextView
            android:id="@+id/tv_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/tv_about_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_about_name"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_about_name"
            android:text="@string/subtitleAbout"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="22sp"
            android:textColor="#997551"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/tv_sub"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_sub"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_sub"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed-medium"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>